[metadata]
name = deepfocus
description = Offcial Python implementation of "FOCUS: Effective Embedding Initialization for Monolingual Specialization of Multilingual Models" published at EMNLP 2023.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/konstantinjdobler/focus
project_urls =
    Bug Tracker = https://github.com/konstantinjdobler/focus/issues
    Changelog = https://github.com/konstantinjdobler/focus/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch
    transformers>=4.0.0
    datasets
    entmax
    fasttext-wheel
    fastdist
    requests
    numpy
    numba
    scipy
    tqdm
    print-on-steroids

zip_safe = True

[options.extras_require]
dev = 
    black
    ruff
    pytest
    pytest_mock

[options.packages.find]
where = src
exclude =
    tests